# CLInote

./: .gitignore  LICENSE  README.md  README.pt.md  notes.py  pyproject.toml  setup.py
